<resources>
    <string name="app_name">MVVM_Android_Architecture_Dagger2</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="e_mail">E_Mail</string>
    <string name="phone">Phone</string>
    <string name="cell">Cell</string>
    <string name="date_of_birthday">Date of birthday</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="location">Location</string>
    <string name="personal_information">Personal Information</string>
    <string name="basic_information">Basic Information</string>
</resources>
